--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: poppins;
+}
+
+@font-face {
+	font-family: poppins;
+	src: url(Poppins-Regular.ttf);
 }
 
 li,
@@ -87,7 +93,7 @@ header {
   text-align: left;
 }
 .li3 {
-  text-align: right;
+  text-align: left;
 }
 .text-list h2 {
   font-style: normal;
