--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,30 +70,41 @@ header {
   background-size: cover;
   height: 458px;
 }
+
+/* punya visimisi */
 .our-vision {
   background-image: url(./img/our-vision.jpg);
   background-size: cover;
   height: 940px;
 }
-.flex-list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
+.wrapper-vision {
+  width: 1170px;
+  height: 100%;
+  margin: 0 auto;
 }
-.flex-list li {
-  flex: auto;
+.content-vision {
+  width: 100%;
+  height: 50%;
+}
+.content-value {
+  width: 100%;
+  height: 50%;
+}
+.content-space {
+  float: left;
   width: 50%;
+  height: 100%;
+}
+.content-space img {
+  margin: 30px 45px;
 }
 .text-list {
   color: black;
-  padding: 10% 5%;
   font-family: "Poppins";
+  margin-top: 30px;
 }
-.li2 {
-  text-align: left;
-}
-.li3 {
-  text-align: left;
+.visimisi {
+  margin-top: 70px;
 }
 .text-list h2 {
   font-style: normal;
@@ -106,7 +117,8 @@ header {
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
-  padding: 10px;
+  margin-bottom: 10px;
+  padding-top: 10px;
 }
 .text-list p {
   size: 12px;
@@ -114,28 +126,7 @@ header {
   padding: 5px;
   line-height: 25px;
 }
-.li1 {
-  padding: 25px;
-}
-.li1 img {
-  width: 100%;
-}
-.li4 {
-  padding: 25px;
-}
-.li4 img {
-  width: 100%;
-}
-.story {
-  background-image: url(./img/story.png);
-  background-size: cover;
-  height: 682px;
-}
-.testi {
-  background-image: url(./img/testi.png);
-  background-size: cover;
-  height: 640px;
-}
+/* end visimisi */
 
 /* punya sejarah */
 .container_history{
@@ -212,6 +203,141 @@ margin-top: 51px;
 }
 /* akhir sejarah */
 
+/* css testi */
+.testimony {
+	height: 640px;
+	background-image: url(./img/testimony_background.png);
+	background-size: cover;
+	opacity: 0.8;
+	text-align: center;
+}
+.testimony .wrapper_testimony {
+	background-color: rgba(0,0,0,0.7);
+	width: 1440px;
+	height: 640px;
+	padding: 25px;
+	color: white;
+	font-family: poppins;
+	margin: 0 auto;
+}
+.testimony h2 {
+	font-size: 36px;
+	margin: 0;
+	font-weight: bold;
+}
+.testimony p {
+	margin-top: 10px;
+	font-size: 24px;
+	font-weight: normal;
+	margin-bottom: 20px;
+}
+.testement {
+	margin: 0 auto;
+	text-align: center;
+}
+.comment {
+	width: 404px;
+	height: 224px;
+	border: 3px solid #FFF;
+	border-radius: 25px;
+	margin: 27px 20px;
+	display: inline-block;
+	background-color: rgba(255,255,255,0.3);
+	padding: 28px;
+}
+.comment:hover {
+	transition: all 1s;
+	border: 5px solid #FFF;
+	background-color: rgba(255,255,255,0.7);
+}
+.comment .user {
+	width: 100%;
+	height: 84px;
+	margin-bottom: 10px;
+}
+.comment .user img {
+	border-radius: 40px;
+	float: left;
+}
+.comment .user .info {
+	text-align: left;
+	float: left;
+	color: #000000;
+	margin-left: 15px;
+	margin-top: 15px;
+	font-size:16px;
+}
+.name {
+	font-size: 19px;
+	font-weight: bolder;
+}
+.from {
+}
+.comment .user .star{
+	float: right;
+	margin-top: 23px;
+}
+.star span {
+	color: #000;
+	font-weight: bolder;
+	font-size: 18px;
+	float: left;
+	margin-right: 3px;
+}
+.star img {
+	width: 24px;
+	height: 24px;
+}
+.comment p {
+	width: 338px;
+	height: 63px;
+	font-family: poppins;
+	color: #000000;
+	font-size: 14px;
+	text-align: left;
+	font-weight: bold;
+	position: absolute;
+}
+.nav {
+	width: 100%;
+}
+.nav .wrapper-nav {
+	width: 100px;
+	margin: 0 auto;
+	display: block;
+}
+.nav ul {
+	list-style-type: none;
+	display: flex;
+}
+li {
+	margin: 0 5px;
+}
+.rounded {
+	height: 22px;
+	width: 22px;
+	border-radius: 11px;
+	background-color: #C4C4C4;
+}
+.nav .prevnext {
+	float: right;
+	display: block;
+	margin-right: 45px;
+}
+.nav .prevnext .btn {
+	width: 47px;
+	height: 47px;
+	float: left;
+	background-color: #C4C4C4;
+	border-radius: 23px;
+	margin: 0 8px;
+}
+.nav .prevnext .btn img {
+	width: 20px;
+	height: 32px;
+	margin-top: 7px;
+}
+/* end css testi */
 
 /* punya footer */
 .footer{
@@ -276,34 +402,3 @@ color: white;
 }
 /* akhir footer */
 
-/* css testi */
-.wrapper {
-  background-color: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  height: 640px;
-}
-.flex-container {
-  display: flex;
-  justify-content: center;
-}
-.flex-1 {
-  margin: 0px 50%;
-  background-color: #f1f1f1;
-  margin: 15px 0 0 0;
-  line-height: 140px;
-  font-size: 30px;
-  width: 429px;
-  height: 108px;
-  justify-content: center;
-}
-.flex-2 {
-  margin: 0px 50%;
-  background-color: #f1f1f1;
-  margin: 15px 0 0 0;
-  line-height: 140px;
-  font-size: 30px;
-  width: 429px;
-  height: 108px;
-  justify-content: center;
-}
-/* end css testi */
